# pythonDev

./: .replit  README.md  app.py  main.py  pyproject.toml
static/: script.js  styles.css
templates/: content.html  home.html
